* done changes accordingly the first review final